# CompilationTheory

./: .gitignore  CMakeLists.txt  README.md
ExamplesCompileLLVM/: commands.sh  main  main.cpp  main.ll  test_main.ll
ast-parser/: CMakeLists.txt  Program.cpp  Program.h  driver.cpp  driver.hh  forward_declarations.hh  includes_for_parser.hh  location.hh  main.cpp  parser.cpp  parser.gv  parser.hh  parser.y  scanner.cpp  scanner.l
ast-parser/grammar-entities/: Assignment.hh  BaseStatement.hh  CallToPrint.cpp  CallToPrint.hh  CondClause.hh  Conditional.cpp  Conditional.hh  Declaration.hh  Statement.hh
ast-parser/grammar-entities/base-elements/: BaseComponent.hh
ast-parser/grammar-entities/expressions/: AddExpression.hh  BaseExpression.hh  EQExpression.hh  GTExpression.cpp  IdentifierExpr.cpp  IdentifierExpr.hh  IntDivExpression.hh  MultExpression.hh  NEExpression.cpp  NestedExpression.hh  NumberExpression.hh  SubExpression.hh
ast-parser/visitors/: BaseVisitor.hh  Interpreter.cpp  Interpreter.hh  PrintVisitor.cpp
custom-codegens/: template-visitor-codegen.py  visitor_types.txt
llvm/: CMakeLists.txt  Program.cpp  driver.cpp  driver.hh  forward_declarations.hh  main.cpp  parser.hh  scanner.hh  scanner.l
llvm/grammar-entities/: Statements.hh
llvm/grammar-entities/expressions/: LEQExpression.hh  SubExpression.cpp  SubExpression.hh
llvm/parser-graph/: parser.gv
llvm/visitors/: BaseVisitor.hh  IrGeneratorVisitor.cpp  IrGeneratorVisitor.hh
llvm/visitors/grammar-entities/: Assignment.hh  Conditional.hh  Declaration.cpp  Declaration.hh  Statement.hh  Statements.cpp
llvm/visitors/grammar-entities/expressions/: AddExpression.cpp  IdentifierExpr.cpp  IntDivExpression.cpp  LEQExpression.cpp  LTExpression.hh  MultExpression.cpp  NumberExpression.cpp
parser/: .gitignore  CMakeLists.txt  driver.cpp  driver.hh  first_iteration.md  main.cpp  parser.y  scanner.l
scanner-only/: .gitignore  CMakeLists.txt  TestCommands.h  lexer.hh  lexer.l  main.cpp
src/: CMakeLists.txt  Program.cpp  Program.h  driver.cpp  driver.hh  forward_declarations.hh  includes_for_parser.hh  main.cpp
src/grammar-entities/: AssertStatement.cpp  AssertStatement.hh  Assignment.cpp  Assignment.hh  BaseStatement.cpp  BaseStatement.hh  BreakStatement.cpp  BreakStatement.hh  CallToPrint.cpp  CallToPrint.hh  CondClause.cpp  Conditional.cpp  Conditional.hh  ContinueStatement.cpp  ContinueStatement.hh  Declaration.cpp  Declaration.hh  PreLoop.cpp  PreLoop.hh  Statement.cpp  Statement.hh  Statements.cpp  Statements.hh
src/grammar-entities/base-elements/: BaseComponent.hh
src/grammar-entities/expressions/: AddExpression.cpp  AddExpression.hh  BaseExpression.hh  EQExpression.cpp  EQExpression.hh  GEQExpression.cpp  GEQExpression.hh  GTExpression.cpp  GTExpression.hh  IdentifierExpr.cpp  IdentifierExpr.hh  IntDivExpression.cpp  IntDivExpression.hh  LEQExpression.cpp  LEQExpression.hh  LTExpression.cpp  LTExpression.hh  MultExpression.cpp  MultExpression.hh  NEExpression.cpp  NEExpression.hh  NestedExpression.cpp  NestedExpression.hh  NumberExpression.cpp  NumberExpression.hh  RemainderExpression.cpp  RemainderExpression.hh  SubExpression.cpp  SubExpression.hh
src/inputs/: parser.y  scanner.l
src/symbol-table/: symbol_table.cpp  symbol_table.hh  visibility_checker.cpp  visibility_checker.hh
src/symbol-table/stack/: symbol_table.cpp
src/symbol-table/tree/: ScopeLayer.cpp  ScopeLayer.hh
src/symbol-table/unused/: ScopeLayer.cpp
src/symbols/: variable.cpp  variable.hh
src/utils/: location_manager.cpp  location_manager.hh  utils.cpp  utils.hh
src/visitors/: BaseVisitor.hh  BreakContinueVisitor.cpp  BreakContinueVisitor.hh  Interpreter.cpp  Interpreter.hh  IrGeneratorVisitor.cpp  IrGeneratorVisitor.hh  PrintVisitor.cpp  PrintVisitor.hh  SymbolTableVisitor.cpp  SymbolTableVisitor.hh  VisibilityCheckVisitor.cpp  VisibilityCheckVisitor.hh
tests/: assignment_undefined.lang  failing_assert.lang  grammar_CE.lang  identifier_undefined.lang  misused_break.lang  misused_continue.lang  scopes_prophecy_error.lang
